// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Catalog grid item Authors list - a couple of authors 1`] = `
<div>
  <p>
    Authors
    :
  </p>
  <ul>
    <li
      key="0"
    >
      author 1
    </li>
    <li
      key="1"
    >
      author 2
    </li>
  </ul>
</div>
`;

exports[`Catalog grid item Authors list - a lot of authors 1`] = `
<div>
  <p>
    Authors
    :
  </p>
  <ul>
    <li
      key="0"
    >
      author 1
    </li>
    <li
      key="1"
    >
      author 2
    </li>
    <li
      key="2"
    >
      author 3
    </li>
    <li
      key="3"
    >
      author 4
    </li>
    <li
      key="4"
    >
      author 5
    </li>
    <li
      key="5"
    >
      author 6
    </li>
    <li
      key="6"
    >
      author 7
    </li>
    <li
      key="7"
    >
      author 8
    </li>
    <li
      key="8"
    >
      author 9
    </li>
    <li
      key="9"
    >
      author 10
    </li>
    <li
      key="10"
    >
      author 11
    </li>
    <li
      key="11"
    >
      author 12
    </li>
    <li
      key="12"
    >
      author 13
    </li>
    <li
      key="13"
    >
      author 14
    </li>
    <li
      key="14"
    >
      author 15
    </li>
    <li
      key="15"
    >
      author 16
    </li>
    <li
      key="16"
    >
      author 17
    </li>
    <li
      key="17"
    >
      author 18
    </li>
    <li
      key="18"
    >
      author 19
    </li>
    <li
      key="19"
    >
      author 20
    </li>
  </ul>
</div>
`;

exports[`Catalog grid item Authors list - no authors 1`] = `
<div>
  <p>
    Author
    :
  </p>
  <p>
    no information
  </p>
</div>
`;

exports[`Catalog grid item Authors list - one author 1`] = `
<div>
  <p>
    Author
    :
  </p>
  <ul>
    <li
      key="0"
    >
      author 1
    </li>
  </ul>
</div>
`;

exports[`Catalog grid item Authors list item 1`] = `
<li
  key="[object Object]"
>
  <Component />
</li>
`;

exports[`Catalog grid item Catalog grid item 1`] = `
<div>
  <Link
    replace={false}
    to="/product/11"
  >
    <img
      alt="title"
      src="img-src"
    />
  </Link>
  <Link
    replace={false}
    to="/product/11"
  >
    <strong>
      title
    </strong>
  </Link>
  <Component
    authors={
      Array [
        "author 1",
        "author 2",
      ]
    }
  />
  <Component
    saleInfo={
      Object {
        "country": "EN",
        "listPrice": Object {
          "amount": 1,
          "currencyCode": "USD",
        },
      }
    }
  />
  <Component
    onAddToCart={[Function]}
    product={
      Object {
        "id": 11,
        "saleInfo": Object {
          "country": "EN",
          "listPrice": Object {
            "amount": 1,
            "currencyCode": "USD",
          },
        },
        "volumeInfo": Object {
          "authors": Array [
            "author 1",
            "author 2",
          ],
          "imageLinks": Object {
            "smallThumbnail": "img-src",
          },
          "title": "title",
        },
      }
    }
  />
</div>
`;

exports[`Catalog grid item Product amount selector 1`] = `
<Fragment>
  <select
    defaultValue={1}
    name="amount"
  >
    <option
      key="0"
      value={1}
    >
      1
    </option>
    <option
      key="1"
      value={2}
    >
      2
    </option>
    <option
      key="2"
      value={3}
    >
      3
    </option>
    <option
      key="3"
      value={4}
    >
      4
    </option>
    <option
      key="4"
      value={5}
    >
      5
    </option>
    <option
      key="5"
      value={10}
    >
      10
    </option>
    <option
      key="6"
      value={25}
    >
      25
    </option>
    <option
      key="7"
      value={50}
    >
      50
    </option>
    <option
      key="8"
      value={100}
    >
      100
    </option>
  </select>
  <button
    className="add-to-cart"
    onClick={[Function]}
  >
    Add to cart
  </button>
</Fragment>
`;

exports[`Catalog grid item Product price EUR 1`] = `
<p>
  <span>
    €1.00
  </span>
</p>
`;

exports[`Catalog grid item Product price USD 1`] = `
<p>
  <span>
    $2.00
  </span>
</p>
`;
